# runner

./: Cargo.toml  comp.wasm  compemb.inspect  compemb.wasm  compemb.wat  concat.wat  core-inspect  core.wasm  core.wat  embedded.wasm  inspect  just-wit.wasm  just-wit.wat  kyle.wasm  kyle.wat  my-component.wasm  play.wat  playcomp.wat  playcomp.wit
src/: main.rs
